--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
     sdk: flutter
 
 
+  firebase_auth: ^3.3.7
+  firebase_core: ^1.12.0
+  cloud_firestore: ^3.1.8
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
