--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.app1">
    <application
-        android:label="app1"
+        android:label="Shoping App"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:exported="true"
